ammendment to the online and offline communities

--- a/index.html
+++ b/index.html
@@ -112,41 +112,41 @@
       
           <div class="form-group">
             <p>
-              What would you like to improve?
+              Which online and offline communities do you participate in as a programmer?
               <span class="clue">(Check all that apply)</span>
             </p>
       
             <label
               ><input
                 name="prefer"
-                value="front-end-projects"
+                value="GitHub"
                 type="checkbox"
                 class="input-checkbox"
-              />Front-end Projects</label
+              />GitHub</label
             >
             <label>
               <input
                 name="prefer"
-                value="back-end-projects"
+                value="Stack-overflow"
                 type="checkbox"
                 class="input-checkbox"
-              />Back-end Projects</label
+              />Stack Overflow</label
             >
             <label
               ><input
                 name="prefer"
-                value="data-visualization"
+                value="Codepen"
                 type="checkbox"
                 class="input-checkbox"
-              />Data Visualization</label
+              />Codepen</label
             >
             <label
               ><input
                 name="prefer"
-                value="challenges"
+                value="FreeCodeCamp"
                 type="checkbox"
                 class="input-checkbox"
-              />Challenges</label
+              />FreeCodeCamp</label
             >
             <label
               ><input
