--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="header">
           <h1 id="title">Survey Form</h1>
-          <p id="description" class="description">
+          <p id="description">
             Thank you for taking the time to help be become a better software developer
           </p>
         </header>
